--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -738,7 +738,7 @@ applause-button {
   display: none;
   max-width: 720px;
   margin: 0 auto;
-  background-color: $primary_bg;
+//  background-color: $primary_bg;
   color: #000000;
 //  border-top: 3px solid $primary;
 }
