--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -731,7 +731,7 @@ applause-button {
   bottom: 0;
   left: 0;
   right: 0;
-//  background-color: $primary_bg;
+  background-color: $primary_bg;
 }
 
 .popup-wrapper {
