--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -762,3 +762,7 @@ applause-button {
   text-align: left;
   padding: 1.25rem 0 1.25rem 0.9rem;
 }
+
+#popup-content a, #popup-content a:link, #popup-content a:visited {
+    color: #f7f056;
+}
