--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -739,7 +739,7 @@ applause-button {
   max-width: 720px;
   margin: 0 auto;
   background-color: $primary;
-  color: #111111;
+  color: #ffffff;
 //  border-top: 3px solid $primary;
 }
 
