--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -761,7 +761,7 @@ applause-button {
 #popup-content {
   max-width: 720px;
   text-align: left;
-  padding: 1.25rem 0 1.25rem 0;
+  padding: 1.25rem 0 1.25rem 0.9rem;
 }
 
 #popup-content a, #popup-content a:link, #popup-content a:visited {
