--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -744,7 +744,7 @@ applause-button {
 }
 
 #popup-index {
-  padding: 1.25rem 0 0 1.25rem;
+  padding: 1.25rem 0 0 0;
 }
 
 #popup-close {
@@ -759,7 +759,7 @@ applause-button {
 }
 
 #popup-content {
-  max-width: 7px;
+  max-width: 720px;
   text-align: left;
   padding: 1.25rem 0 1.25rem 0.9rem;
 }
