--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -748,7 +748,7 @@ applause-button {
 }
 
 #popup-close {
-  padding: 1.25rem 0 0 0;
+  padding: 1.25rem;// 0 0 0;
   margin-left: auto;
   cursor: pointer;
   color: #f7f056;
