--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -743,9 +743,9 @@ applause-button {
 //  border-top: 3px solid $primary;
 }
 
-#popup-index {
-  padding: 1.25rem 0 0 0;
-}
+//#popup-index {
+//  padding: 1.25rem 0 0 0;
+//}
 
 #popup-close {
   padding: 1.25rem 0 0 1.25rem;
