--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -747,12 +747,12 @@ applause-button {
 //  padding: 1.25rem 0 0 0;
 //}
 
-#popup-close {
-  padding: 1.25rem 0 0 1.25rem;
-  margin-left: auto;
-  cursor: pointer;
-  color: #f7f056;
-}
+//#popup-close {
+//  padding: 1.25rem 0 0 1.25rem;
+//  margin-left: auto;
+//  cursor: pointer;
+//  color: #f7f056;
+//}
 
 #popup-close:hover {
   background-color: $primary;
