--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -739,8 +739,8 @@ applause-button {
   display: none;
   max-width: 720px;
   margin: 0 auto;
-  background-color: $primary;
-  color: #ffffff;
+//  background-color: $primary;
+//  color: #ffffff;
 //  border-top: 3px solid $primary;
 }
 
