--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -755,9 +755,9 @@ applause-button {
 //  color: #f7f056;
 //}
 
-#popup-close:hover {
-  background-color: $primary;
-}
+//#popup-close:hover {
+//  background-color: $primary;
+//}
 
 #popup-content {
   max-width: 720px;
