--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -763,6 +763,7 @@ applause-button {
   max-width: 720px;
   text-align: left;
   padding: 1rem;
+  line-height: 1.4rem;
 }
 
 #popup-content a, #popup-content a:link, #popup-content a:visited {
