--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -764,6 +764,10 @@ applause-button {
   text-align: left;
   padding: 1rem;
   line-height: 1.4rem;
+  margin: 0 auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens:auto
 }
 
 #popup-content a, #popup-content a:link, #popup-content a:visited {
