--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -767,7 +767,7 @@ applause-button {
   margin: 0 auto;
   -moz-hyphens: auto;
   -webkit-hyphens: auto;
-  hyphens: auto
+  hyphens: auto;
 }
 
 #popup-content a, #popup-content a:link, #popup-content a:visited {
