--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -48,7 +48,7 @@ box-shadow: 0px 0px 2px rgba(42, 84, 169, 0.2); }
 border-bottom: 0px solid; }
 
 .reveal table > thead {
-  border-top: 2px solid #111111; }
+  border-top: 2px solid #2a54a9; }
   
 .reveal table > thead > tr > th {
   border-bottom: 1px solid #111111; }  
