reveal_custom.css

--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -51,7 +51,7 @@ border-bottom: 0px solid; }
   border-top: 2px solid #2a54a9; }
   
 .reveal table > thead > tr > th {
-  border-bottom: 1px solid #111111; }  
+  border-bottom: 1px solid #2a54a9; }  
 
 .reveal table tbody tr:last-child th,
 .reveal table tbody tr:last-child td {
