--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -55,7 +55,7 @@ border-bottom: 0px solid; }
 
 .reveal table tbody tr:last-child th,
 .reveal table tbody tr:last-child td {
-border-bottom: 2px solid #111111; }
+border-bottom: 2px solid #2a54a9; }
 
 /* Table Striped */
 .reveal table > tbody > tr:nth-child(odd) > td,
