--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -66,7 +66,7 @@ background-color: #BBCCEE; }
 .reveal table > tbody > tr:hover > td,
 .reveal table > tbody > tr:hover > th {
 color: #fffff8;
-background-color: #555555; }
+background-color: #2a54a9; }
 
 /*********************************************
  * LINKS
