--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -43,6 +43,9 @@ box-shadow: 0px 0px 2px rgba(42, 84, 169, 0.2); }
 .reveal code {
   font-family: "Inconsolata", monospace; }
   
+.reveal table > thead > tr > th {
+  color: #2a54a9; }
+
 .reveal table th,
 .reveal table td {
 border-bottom: 0px solid; }
