page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -58,6 +58,7 @@
 		     </svg>
 			 <span class="count"></span>
 		 </span>
+		 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		  <script>
 		 // the clap counts for each article are displayed via span elements with the 'kudos' class, find all these
 			 function loadClapCount() {
