--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,6 +21,23 @@ body {
   color: #111111;
   background-color: #fffff8; }
   
+sup a {
+  position: relative;
+  top: 0;
+  left: 0;
+  font-weight: bold;
+  color: #777;
+  background-color: #e3e3e3;
+  border-radius: 50%;
+  padding:0.2em 0.5em 0.2em
+}
+
+sup a:hover {
+  border: none;
+  color: #fff;
+  background-color:#a41e22
+}  
+  
 p svg {
 	display: inline-flex;
 	align-self: center;
