--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -26,8 +26,8 @@ sup a {
   top: 0;
   left: 0;
   font-weight: bold;
-  color: #777;
-  background-color: #e3e3e3;
+  color: #000000;
+  background-color: $primary_bg;
   border-radius: 50%;
   padding:0.2em 0.5em 0.2em
 }
