--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -34,8 +34,8 @@ sup a {
 
 sup a:hover {
   border: none;
-  color: #fff;
-  background-color:#a41e22
+  color: #ffffff;
+  background-color: $primary
 }  
   
 p svg {
