--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -35,7 +35,8 @@ sup a {
 sup a:hover {
   border: none;
   color: #ffffff;
-  background-color: $primary
+  background-color: $primary;
+  text-decoration: none;
 }  
   
 p svg {
