--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -37,6 +37,24 @@ sup a:hover {
   color: #ffffff;
   background-color: $primary;
   text-decoration: none;
+}
+
+.footnotes ol li p a:last-child {
+    position: relative;
+    top: -0.2em;
+    font-weight: bold;
+    color: #777;
+    background-color: #e3e3e3;
+    font-size: 0.8em;
+    border-radius: 0.4em;
+    padding: 0.2em 0.4em 0;
+    border:none
+}
+
+.footnotes ol li p a:last-child:hover {
+    border: none;
+    color: #fff;
+    background-color:#a41e22
 }  
   
 p svg {
