--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,7 +21,7 @@ body {
   color: #111111;
   background-color: #fffff8; }
   
-sup a {
+a.footnote-ref {
   position: relative;
   top: 0;
   left: 0;
