--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -32,7 +32,7 @@ a.footnote-ref {
   padding:0.2em 0.5em 0.2em
 }
 
-sup a:hover {
+a.footnote-ref:hover {
   border: none;
   color: #ffffff;
   background-color: $primary;
