--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -37,6 +37,7 @@ a.footnote-ref:hover {
   color: #ffffff;
   background-color: $primary;
   text-decoration: none;
+  transition: none;
 }
 
 a.footnote-backref {
