--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -57,6 +57,7 @@ a.footnote-backref:hover {
     color: #ffffff;
     background-color: $primary;
 	text-decoration: none;
+    transition: none;	
 }  
   
 p svg {
