--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -40,7 +40,7 @@ a.footnote-ref:hover {
   transition: none;
 }
 
-a.footnote-backref {
+.footnotes a.footnote-backref {
     position: relative;
     top: -0.2em;
     font-weight: bold;
