--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -52,7 +52,7 @@ a.footnote-ref:hover {
     border:none
 }
 
-a.footnote-backref:hover {
+.footnotes a.footnote-backref:hover {
     border: none;
     color: #ffffff;
     background-color: $primary;
