--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -79,8 +79,18 @@ color: $primary; }
 
 pre,
 code {
-  color: #000000;
-  background-color: $primary_complementary_bg; }  
+  background: $primary_complementary_bg;
+  border-radius: 0.5em;
+  border: 1px solid #bbb;
+  overflow-x:auto
+}
+  
+  pre, p code, li code, .mdinlinecode {
+      background: #eee;
+      border-radius: 0.5em;
+      border: 1px solid #bbb;
+      overflow-x:auto
+  }  
   
 pre {
 font-size: 0.875rem; }
