--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -82,7 +82,8 @@ code {
   background: $primary_complementary_bg;
   border-radius: 0.5em;
   border: 1px solid #bbb;
-  overflow-x:auto
+  overflow-x:auto;
+  padding:0.2em 0.4em
 }   
   
 pre {
