--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -80,6 +80,7 @@ color: $primary; }
 pre,
 code {
   background: $primary_bg;
+  color: #111111;
   border-radius: 0.5em;
   border: 1px solid $primary;
   overflow-x:auto;
