--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -40,7 +40,7 @@ a.footnote-ref:hover {
   transition: none;
 }
 
-.footnotes a.footnote-backref {
+a.footnote-backref {
     position: relative;
     top: -0.2em;
     font-weight: bold;
@@ -52,7 +52,7 @@ a.footnote-ref:hover {
     border:none
 }
 
-.footnotes a.footnote-backref:hover {
+a.footnote-backref:hover {
     border: none;
     color: #fffff8;
     background-color: $primary;
