--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -58,6 +58,11 @@ a.footnote-backref:hover {
     background-color: $primary;
 	text-decoration: none;
     transition: none;	
+}
+
+#popup-content a.footnote-backref:hover {
+	color: $primary;
+	background-color: #fffff8;	
 }  
   
 p svg {
