--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -61,7 +61,7 @@ a.footnote-backref:hover {
 }
 
 #popup-content a.footnote-backref {
-	color: #111111;
+	color: #111111 !important;
 }
 
 #popup-content a.footnote-backref:hover {
