--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -62,6 +62,7 @@ a.footnote-backref:hover {
 
 #popup-content a.footnote-backref {
 	color: #111111 !important;
+	background-color: #f7f056;
 }
 
 #popup-content a.footnote-backref:hover {
