--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -91,7 +91,7 @@ code {
   background: $primary_bg;
   color: #000000;
   border-radius: 0.5em;
-  border: 1px solid $primary;
+//  border: 1px solid $primary;
   overflow-x:auto;
   padding:0.2em 0.4em
 }   
