--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,6 +10,8 @@
   {{ partial "search" . }}
 
   {{ partial "navbar" . }}
+  
+  {{ partial "breadcrumb" . }}  
 
   {{ block "main" . }}{{ end }}
   
