--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -364,6 +364,10 @@ color: $primary; }
   color: $primary_complementary;
 }
 
+.home-section-wg-portfolio p {
+  font-family: "Cabin Sketch", sans-serif;
+  color: $primary_complementary; }
+
 .section-heading a {
 	color: currentColor;
 	text-decoration: none;
