--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -364,7 +364,7 @@ color: $primary; }
   color: $primary_complementary;
 }
 
-.home-section-wg-portfolio p {
+#segundo-bach-fisica p {
   font-family: "Cabin Sketch", sans-serif;
   color: $primary_complementary; }
 
