--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -365,6 +365,8 @@ color: $primary; }
 }
 
 #segundo-bach-fisica p {
+  font-weight: 400;
+  font-size: 1.1rem;	
   font-family: "Cabin Sketch", sans-serif;
   color: $primary_complementary; }
 
