--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -369,6 +369,12 @@ color: $primary; }
   font-size: 1.1rem;	
   font-family: "Cabin Sketch", sans-serif;
   color: $primary_complementary; }
+  
+#segundo-bach-quimica .center-text p {
+font-weight: 400;
+font-size: 1.1rem;	
+font-family: "Cabin Sketch", sans-serif;
+color: $primary_complementary; }  
 
 .section-heading a {
 	color: currentColor;
