--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -364,7 +364,7 @@ color: $primary; }
   color: $primary_complementary;
 }
 
-.home-section .wg-portfolio .center-text p {
+#segundo-bach-fisica .center-text p {
   font-weight: 400;
   font-size: 1.1rem;	
   font-family: "Cabin Sketch", sans-serif;
