--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -376,9 +376,9 @@ font-size: 1.1rem;
 font-family: "Cabin Sketch", sans-serif;
 color: $primary_complementary; }
 
-//.btn-toolbar {
-//    justify-content:center
-//}  
+.btn-toolbar {
+    justify-content:center
+}  
 
 .section-heading a {
 	color: currentColor;
