--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -372,7 +372,7 @@ color: $primary; }
   color: $primary_complementary;
 }
 
-#segundo-bach-fisica .center-text p {
+section.home-section p {
   font-weight: 400;
   font-size: 1.1rem;	
   font-family: "Cabin Sketch", sans-serif;
