--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -845,6 +845,6 @@ applause-button {
 }
 
 #popup-content a > code {
-  color: currentColor;
+  color: #000000;
   text-decoration: none;
   border-bottom: solid 1px currentColor; }
