--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -847,4 +847,4 @@ applause-button {
 #popup-content a > code {
   color: #000000;
   text-decoration: none;
-  border-bottom: solid 1px currentColor; }
+  border-bottom: solid 1px #000000; }
