--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -846,5 +846,4 @@ applause-button {
 
 #popup-content a > code {
   color: #000000;
-  text-decoration: none;
-  border-bottom: solid 1px #000000; }
+  text-decoration: underline; }
