--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,6 +21,10 @@ body {
   color: #111111;
   background-color: #fffff8; }
   
+a:visited {
+	color: $primary_complementary;
+}
+  
 a.footnote-ref {
   position: relative;
   top: 0;
