site_footer.html

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -22,7 +22,7 @@
     {{ end }}
 
   <p class="powered-by">
-	  {{ if .Site.Language.Lang "es" }}
+	  {{ if eq .Site.Language.Lang "es" }}
     Funcionando con <a href="https://github.com/rodrigoalcarazdelaosa/rodrigoalcarazdelaosa.me" target="_blank" rel="noopener"><i class="fab fa-github mr-1"></i></a> y el
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">tema Academic</a> para
     <a href="https://gohugo.io" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-width="27" aria-label="Logo" height="0.75rem" viewBox="0 0 1493 391">
@@ -33,7 +33,7 @@
   <path fill="#fff" d="M1320.72 89.15c58.79 0 106.52 47.73 106.52 106.51 0 58.8-47.73 106.52-106.52 106.52-58.78 0-106.52-47.73-106.52-106.52 0-58.78 47.74-106.51 106.52-106.51zm0 39.57c36.95 0 66.94 30 66.94 66.94a66.97 66.97 0 0 1-66.94 66.94c-36.95 0-66.94-29.99-66.94-66.94a66.97 66.97 0 0 1 66.93-66.94h.01zm-283.8 65.31c0 47.18-8.94 60.93-26.81 80.58-17.87 19.65-41.57 27.57-71.1 27.57-27 0-48.75-9.58-67.61-26.23-20.88-18.45-36.08-47.04-36.08-78.95 0-31.37 11.72-58.48 32.49-78.67 18.22-17.67 45.34-29.18 73.3-29.18 33.77 0 68.83 15.98 90.44 47.53l-31.73 26.82c-13.45-25.03-32.94-33.46-60.82-34.26-30.83-.88-64.77 28.53-62.25 67.75 1.4 21.94 11.65 59.65 60.96 66.57 25.9 3.63 55.36-24.02 55.36-39.04H944.4v-37.5h92.5V194l.02.03zm-562.6-94.65h42.29v112.17c0 17.8.49 29.33 1.47 34.61 1.69 8.48 4.81 14.37 11.17 19.5 6.37 5.13 13.8 6.59 24.84 6.59 11.2 0 14.96-1.74 20.66-6.6 5.69-4.85 9.12-9.46 10.28-16.53 1.15-7.07 3.07-18.8 3.07-35.18V99.38h42.28v108.78c0 24.86-1.07 42.43-3.21 52.69-2.14 10.27-6.08 18.93-11.82 26-5.74 7.06-13.42 12.69-23.03 16.88-9.62 4.19-22.16 6.28-37.65 6.28-18.7 0-32.87-2.28-42.52-6.85-9.66-4.57-17.3-10.5-22.9-17.8-5.61-7.3-9.3-14.95-11.08-22.96-2.58-11.86-3.88-29.38-3.88-52.55V99.38h.03zM93.91 299.92V92.7h43.35v75.48h71.92V92.7h43.48v207.22h-43.48v-90.61h-71.92v90.61z"/>
 </svg>
 </a>.
-{{ else if .Site.Language.Lang "en" }}
+{{ else if eq .Site.Language.Lang "en" }}
     Powered by <a href="https://github.com/rodrigoalcarazdelaosa/rodrigoalcarazdelaosa.me" target="_blank" rel="noopener"><i class="fab fa-github mr-1"></i></a> and the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
     <a href="https://gohugo.io" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-width="27" aria-label="Logo" height="0.75rem" viewBox="0 0 1493 391">
