--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -21,7 +21,7 @@
 		  {{ if eq .Site.Language.Lang "es" }}
 			  Hay <em>likes</em> y luego hay <em>kudos</em>. Esta palabra, proveniente del griego κῦδος, significa <em>fama</em>, <em>gloria</em> o <em>prestigio</em>. Dándome kudos estás reconociendo y alabando mi esfuerzo, animándome a seguir trabajando.
 		  {{ else if eq .Site.Language.Lang "en" }}
-  			  There are <em>likes</em> and then there are <em>kudos</em>. This word, from the Greek κῦδος, means <em>fame</em>, <em>glory</em> or <em>prestige</em>. By giving me kudos you are acknowledging and praising my effort, encouraging me to keep working.
+  			  There are <em>likes</em> and then there are <em>kudos</em>. This word, from the Greek κῦδος, means <em>fame</em>, <em>glory</em> or <em>prestige</em>. By giving me kudos you are acknowledging and praising my effort, encouraging me to continue preparing quality materials.
 		{{ end }}				  
 		  </p>
 </div>
