--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -46,7 +46,7 @@
   {{ end }}   
     
   {{/* Show kudos count. */}}
-  {{ $disqus_enabled := eq site.Params.comments.engine 1 | and (index site.Params.comments.commentable $page.Type) | and (ne $page.Params.commentable false) | or $page.Params.commentable }}
+  {{ (index site.Params.comments.commentable $page.Type) | and (ne $page.Params.commentable false) | or $page.Params.commentable }}
   {{ if and $disqus_enabled (site.Params.comments.disqus.show_count | default true) }}
   <span class="middot-divider"></span>
 	  <span class="clap" data-url="{{ $page.Permalink }}">	  
