site_footer.html

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -14,6 +14,9 @@
   <p class="powered-by">
     {{ with site.Copyright }}{{ replace . "{year}" now.Year | markdownify}}{{ end }}
   </p>
+  
+  {{/* Display copyright license. */}}
+  {{ partial "site_footer_license" . }}
 
     {{ with site.GetPage "licencia.md" }}
     <p class="powered-by">
