--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -547,18 +547,18 @@ select.form-control:focus::-ms-value {
 *  highlight.js
 **************************************************/
 	
-//.hljs {
-//	color: #555555;
-//	background: #fffff8;
-//}
-//
-//.hljs-variable, .hljs-template-variable, .hljs-tag, .hljs-name, .hljs-selector-id, .hljs-selector-class, .hljs-regexp, .hljs-deletion {
-//    color: $primary_complementary;
-//}
-//
-//.hljs-string, .hljs-symbol, .hljs-bullet, .hljs-addition {
-//    color: $example_fg;
-//}
+.hljs {	
+	color: #555555;
+	background: #fffff8;
+}
+
+.hljs-variable, .hljs-template-variable, .hljs-tag, .hljs-name, .hljs-selector-id, .hljs-selector-class, .hljs-regexp, .hljs-deletion {
+    color: $primary_complementary;
+}
+
+.hljs-string, .hljs-symbol, .hljs-bullet, .hljs-addition {
+    color: $example_fg;
+}
 
 /*************************************************
 *  Kudos
