--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -272,7 +272,7 @@ div.alert-gdrive > div:first-child::before {
 }
 
 div.alert-thanks > div:first-child::before {
-  font-family: 'Font Awesome 5 Brands';
+  font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   color: $primary;
   content: '\f684';
