--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -3,7 +3,7 @@
   <ul class="share">
 	  <li><applause-button style="width: 30px; height: 30px;" url="{{ $.Permalink }}" /></li>
 	  <script src="https://apis.google.com/js/platform.js" async defer></script>
-	  <li><g:sharetoclassroom url="{{ $.Permalink }}" size="30"></g:sharetoclassroom></li>
+	  <li><g:sharetoclassroom url="{{ $.Permalink }}" size="30" theme="dark"></g:sharetoclassroom></li>
     {{ range where site.Data.page_sharer.buttons "enable" true }}
       {{ $pack := or .icon_pack "fas" }}
       {{ $pack_prefix := $pack }}
