--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -297,6 +297,9 @@ div.alert-thanks > div:first-child::before {
 .card .card-image.hover-overlay:after {
 color: #555555; }
 
+.card-body {
+  background: #fffff8;; }
+
 /*************************************************
  *  Search
  **************************************************/
