--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -298,6 +298,7 @@ div.alert-thanks > div:first-child::before {
 color: #555555; }
 
 .card-body {
+  color: #111111;
   background: #fffff8;; }
 
 /*************************************************
