--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -153,6 +153,9 @@ site-footer,
 footer a.back-to-top i {
 color: rgba(42, 84, 169, 0.54); }
 
+footer {
+  margin: 2rem 0 0; }
+
 .powered-by svg {
 	display: inline-flex;
 	align-self: center;
