--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -154,7 +154,7 @@ footer a.back-to-top i {
 color: rgba(42, 84, 169, 0.54); }
 
 footer {
-  margin: 2rem 0 0; }
+  margin-top: 0rem; }
 
 .powered-by svg {
 	display: inline-flex;
