--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -227,6 +227,10 @@ background-color: $primary; }
  *  Article Alerts (Shortcode) and Asides (Mmark)
  **************************************************/
 
+.article-style aside a svg,
+div.alert a svg{
+  border-bottom: solid 0px currentColor; }
+
 div.alert > div:first-child::before {
 color: $primary;
 }
