--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -229,7 +229,7 @@ background-color: $primary; }
 
 .article-style aside a svg,
 div.alert a svg{
-  border-bottom: solid 0px currentColor; }
+  border-bottom: none; }
 
 div.alert > div:first-child::before {
 color: $primary;
