--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -229,6 +229,7 @@ background-color: $primary; }
 
 .article-style aside a svg,
 div.alert a svg {
+	text-decoration: none,
   border-bottom: none; }
 
 div.alert > div:first-child::before {
